--- a/math/math.html
+++ b/math/math.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <Link type="text/css" href="../home/home.css" rel="stylesheet"></Link>
+    <Link type="text/css" href="../math/math.css" rel="stylesheet"></Link>
 </head>
 <body>
 <div class="header">
@@ -23,29 +23,30 @@
     </div>
 </div>
 <div class="nav">
-    <span class="visiable-nav">Khoa Học Tự Nhiên
-        <div>
+    <span class="visiable-nav">KHOA HỌC TỰ NHIÊN
+        <div class="hidden-nav">
             <a href="">Toán</a>
             <a href="">Vật Lý</a>
             <a href="">Hóa Học</a>
         </div>
     </span>
-    <span class="visiable-nav">Khoa học xã hội
-        <div>
+    <span class="visiable-nav">KHOA HỌC XA HỘI
+        <div class="hidden-nav">
             <a href="">Văn Học</a>
             <a href="">Lịch Sử</a>
             <a href="">Địa Lý</a>
         </div>
     </span>
-    <span>Các Môn Tự Chọn
-        <div>
+    <span class="visiable-nav">CÁC MÔN TỰ CHỌN
+        <div class="hidden-nav">
             <a href="">Tin Học</a>
-            <a href="">Công Nghệ</a>
+            <a href="">Công nghệ</a>
+            <a href="">Âm nhạc</a>
         </div>
     </span>
 </div>
+</div>
 <div class="body">
-    <h1>Nội dung phổ biến</h1>
 
 </div>
 <div class="footer"></div>
